objects/DMAPP__DM_DVLS_Curriculum_User__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing user activity on a given eLearning Curriculum</description>
    <fields>
        <fullName>DMAPP__DVLS_Curriculum__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealmaker Curriculum</label>
        <referenceTo>DMAPP__DM_DVLS_Curriculum__c</referenceTo>
        <relationshipLabel>Curriculum Users</relationshipLabel>
        <relationshipName>DVLS_Curriculum_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Mark__c</fullName>
        <formula>IF(OR(ISNULL(DMAPP__Score_Rollup__c), ISNULL(DMAPP__DVLS_Curriculum__r.DMAPP__Question_Rollup__c)), NULL, TEXT(DMAPP__Score_Rollup__c) &amp; &apos;/&apos; &amp; TEXT(DMAPP__DVLS_Curriculum__r.DMAPP__Question_Rollup__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Complete_Rollup__c</fullName>
        <label>Quicklink Complete Rollup</label>
        <summarizedField>DMAPP__DM_DVLS_Module_User__c.DMAPP__Quicklink_Complete_Rollup__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_DVLS_Module_User__c.DMAPP__DM_DVLS_Curriculum_User__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Count_Rollup__c</fullName>
        <label>Quicklink Count Rollup</label>
        <summarizedField>DMAPP__DM_DVLS_Module_User__c.DMAPP__Quicklink_Count_Rollup__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_DVLS_Module_User__c.DMAPP__DM_DVLS_Curriculum_User__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score_Rollup__c</fullName>
        <label>Score Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <formula>IF(OR(ISNULL(DMAPP__Score_Rollup__c), ISNULL(DMAPP__DVLS_Curriculum__r.DMAPP__Question_Rollup__c)), NULL,DMAPP__Score_Rollup__c / DMAPP__DVLS_Curriculum__r.DMAPP__Question_Rollup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <formula>IF(DMAPP__Quicklink_Complete_Rollup__c &gt;=
      DMAPP__DVLS_Curriculum__r.DMAPP__Quicklink_Rollup__c , &apos;Completed&apos;,
      &apos;Started&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Curriculum User</label>
    <nameField>
        <label>eLearning Curriculum User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curriculum Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>